update tex files

--- a/tex/References.bib
+++ b/tex/References.bib
@@ -458,3 +458,11 @@
     url = {https://www.jstatsoft.org/v39/i05/},
     doi = {10.18637/jss.v039.i05},
   }
+  
+% Python reference manual
+@book{van1995python,
+  title={Python reference manual},
+  author={Van Rossum, Guido and Drake Jr, Fred L},
+  year={1995},
+  publisher={Centrum voor Wiskunde en Informatica Amsterdam}
+}
