--- a/tex/Text/Appendix.tex
+++ b/tex/Text/Appendix.tex
@@ -1,4 +1,22 @@
 \pagenumbering{roman}
+\begin{table}[]
+\begin{adjustbox}{max width=\textwidth}
+\begin{tabular}{llllllllll}
+VADER as   a   & \multicolumn{3}{l}{Consumer Opinion   Surveys} & \multicolumn{3}{l}{Unemployment Rate}      & \multicolumn{3}{l}{Interest Rate}         \\
+regressor      & MAE            & MSE           & RMSE          & MAE           & MSE          & RMSE        & MAE          & MSE          & RMSE        \\
+LASSO          & 1.644962       & 4.088575      & 2.022022      & 0.209345      & 0.075408     & 0.274606    & 0.176985     & 0.040708     & 0.201762    \\
+Adaptive LASSO & 1.655863       & 4.169653      & 2.041973      & 0.207937      & 0.064618     & 0.2542      & 0.188506     & 0.046849     & 0.216447    \\
+Elastic Net    & 1.652102       & 4.145303      & 2.036002      & 0.207139      & 0.073338     & 0.270809    & 0.181415     & 0.042943     & 0.207228    \\
+VADER as   a   & \multicolumn{3}{l}{Consumer Price Index}       & \multicolumn{3}{l}{Gross Domestic Product} & \multicolumn{3}{l}{Producer Prices Index} \\
+regressor      & MAE            & MSE           & RMSE          & MAE           & MSE          & RMSE        & MAE          & MSE          & RMSE        \\
+LASSO          & 1.644962       & 4.088575      & 2.022022      & 0.209345      & 0.075408     & 0.274606    & 0.176985     & 0.040708     & 0.201762    \\
+Adaptive LASSO & 1.655863       & 4.169653      & 2.041973      & 0.207937      & 0.064618     & 0.2542      & 0.188506     & 0.046849     & 0.216447    \\
+Elastic Net    & 1.652102       & 4.145303      & 2.036002      & 0.207139      & 0.073338     & 0.270809    & 0.181415     & 0.042943     & 0.207228   
+\end{tabular}
+\end{adjustbox}
+\end{table}
+
+
 \newpage
 
 
