--- a/tex/References.bib
+++ b/tex/References.bib
@@ -466,3 +466,26 @@
   year={1995},
   publisher={Centrum voor Wiskunde en Informatica Amsterdam}
 }
+
+% vars
+@Article{pfaff2008var,
+    title = {VAR, SVAR and SVEC Models: Implementation Within {R}
+      Package {vars}},
+    author = {Bernhard Pfaff},
+    journal = {Journal of Statistical Software},
+    year = {2008},
+    volume = {27},
+    number = {4},
+    url = {https://www.jstatsoft.org/v27/i04/},
+  }
+    @Book{pfaff2008book,
+    title = {Analysis of Integrated and Cointegrated Time Series with
+      R},
+    author = {B. Pfaff},
+    publisher = {Springer},
+    edition = {Second},
+    address = {New York},
+    year = {2008},
+    note = {ISBN 0-387-27960-1},
+    url = {https://www.pfaffikus.de},
+  }
